# major-requirement-parser

./: Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs
examples/: math_ba.json  math_ba.mql
libmql/: Cargo.toml
libmql-py/: Cargo.toml  pyproject.toml
libmql-py/.github/workflows/: CI.yml
libmql/src/: mql.pest  parser.rs
src/: cli.rs  main.rs  mql.pest  parser.rs  test.rs
