[package]
name = "major-requirement-parser"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "mql"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
