[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylibmql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py38"] }
libmql = { path = "../libmql" }
